<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".PatientCheckUpQuestion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:background="@drawable/blue_bg">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/medicare" />

            </FrameLayout>

            <com.example.telehealth.customfonts.MyTextView_Poppins_Medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="NEW CHECKUP"
                android:textColor="#22C7B8"
                android:textSize="25sp" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="12.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <!-- INPUT -->

                <com.example.telehealth.customfonts.EditText_Poppins_Regular
                    android:id="@+id/patient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/patient_icon"
                    android:background="@android:color/transparent"
                    android:hint="Patient Name"
                    android:enabled="false"
                    android:maxLength="20"
                    android:maxLines="1"

                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <!-- ICON -->
                <ImageView
                    android:id="@+id/patient_icon"
                    android:layout_width="18.7dp"
                    android:layout_height="18.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_birthday" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="12.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <!-- INPUT -->

                <com.example.telehealth.customfonts.EditText_Poppins_Regular
                    android:id="@+id/patient_bdy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/patient_bdy_icon"
                    android:background="@android:color/transparent"
                    android:hint="Birthday"
                    android:enabled="false"
                    android:maxLength="10"
                    android:maxLines="1"

                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <!-- ICON -->
                <ImageView
                    android:id="@+id/patient_bdy_icon"
                    android:layout_width="18.7dp"
                    android:layout_height="18.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_birthday" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="12.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <!-- INPUT -->

                <com.example.telehealth.customfonts.EditText_Poppins_Regular
                    android:id="@+id/patient_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/patient_gender_icon"
                    android:background="@android:color/transparent"
                    android:enabled="false"
                    android:hint="Gender"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <!-- ICON -->
                <ImageView
                    android:id="@+id/patient_gender_icon"
                    android:layout_width="18.7dp"
                    android:layout_height="18.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_birthday" />

            </RelativeLayout>




            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="12.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <!-- INPUT -->

                <com.example.telehealth.customfonts.MyTextView_Poppins_Regular
                    android:id="@+id/date_of_checkup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/birthday_icon"
                    android:background="@android:color/transparent"
                    android:hint="Date of Checkup"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="12sp" />

                <!-- ICON -->
                <ImageView
                    android:id="@+id/birthday_icon"
                    android:layout_width="18.7dp"
                    android:layout_height="18.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_birthday" />

            </RelativeLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"

                android:text="@string/question1"
                android:textColor="#22C7B8"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/neurologist"
                    android:textColor="#22C7B8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/neurologist" />

                <RadioButton
                    android:id="@+id/neurologist2"
                    android:layout_width="wrap_content"
                    android:textColor="#22C7B8"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/neurologist2" />

                <RadioButton
                    android:id="@+id/oncologist"
                    android:layout_width="wrap_content"
                    android:textColor="#22C7B8"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/oncologist" />

                <RadioButton
                    android:id="@+id/pathologist"
                    android:layout_width="wrap_content"
                    android:textColor="#22C7B8"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/pathologist" />

                <RadioButton
                    android:id="@+id/hematologist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:textColor="#22C7B8"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/hematologist" />

                <RadioButton
                    android:id="@+id/dermatologist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:textColor="#22C7B8"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/dermatologist" />

                <RadioButton
                    android:id="@+id/none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:textColor="#22C7B8"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/none" />

            </RadioGroup>



            <com.example.telehealth.customfonts.MyTextView_Poppins_Medium
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="18.7dp"
                android:layout_marginRight="62dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="START"
                android:layout_marginBottom="30dp"
                android:textColor="#ffffff"
                android:textSize="12sp" />



        </LinearLayout>
    </ScrollView>

</LinearLayout>